
    HDFS-1746. Federation: TestFileAppend3 fails intermittently. (jitendra)

    HDFS-1703. Improve start/stop scripts and add decommission tool for
    federation. (Tanping Wang, Erik Steffl via suresh)

    HDFS-1754. Federation: testFsck fails. (boryas)

    HDFS-1755. Federation: The BPOfferService must always connect to namenode as 
    the login user. (jitendra)

    HDFS-1791. Federation: Add command to delete block pool directories 
    from a datanode. (jitendra)

    HDFS-1813. Federation: Authentication using BlockToken in RPC to datanode 
    fails. (jitendra)

    HDFS-1873. Federation: Add cluster management web console.
    (Tanping Wang via suresh)

    HDFS 1911 HDFS tests for the newly added viewfs. (sanjay)

    HDFS-1914. Federation: namenode storage directories must be configurable
    specific to name service. (suresh)

  IMPROVEMENTS

    HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)

    HDFS-1628. Display full path in AccessControlException.  (John George
    via szetszwo)

    HDFS-1707. Federation: Failure in browsing data on new namenodes. 
    (jitendra)

    HDFS-1683. Test Balancer with multiple NameNodes.  (szetszwo)

    HDFS-1547. Improve decommission mechanism. (suresh)

    HDFS-1588. Remove hardcoded strings for configuration keys, "dfs.hosts"
    and "dfs.hosts.exlude". (Erik Steffl via suresh)

    HDFS-1117. Metrics 2.0 HDFS instrumentation. (Luke Lu)

    HDFS-1544. Ivy resolve force mode off by default. (Luke Lu)

    HDFS-1810. Remove duplicate jars from ivy. (Luke Lu)

    HDFS-1543. Remove system test artifacts from default build. (Luke Lu)

    HDFS-1629. Add a method to BlockPlacementPolicy for keeping the chosen
    nodes in the output array.  (szetszwo)

    HDFS-1736. Remove the dependency from DatanodeJspHelper to FsShell.
    (Daryn Sharp via szetszwo)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-1449. Fix test failures - ExtendedBlock must return 