@@ -230,6 +230,8 @@ Trunk (unreleased changes)
     HDFS-1755. Federation: The BPOfferService must always connect to namenode as 
     the login user. (jitendra)
 
+    HDFS-1675. Support transferring RBW between datanodes. (szetszwo)
+
     HDFS-1791. Federation: Add command to delete block pool directories 
     from a datanode. (jitendra)
 
